data/forge_javadoc/1.8.9/processed/net_minecraft_world_gen_structure_StructureVillagePieces.House1.md
# StructureVillagePieces.House1

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.House1

## Class signature

```java
public static class StructureVillagePieces.House1 extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World worldIn, java.util.Random randomIn, StructureBoundingBox structureBoundingBoxIn)` — second Part of Structure generating, this for example places Spiderwebs, Mob Spawners, it closes Mineshafts at the end, it adds Fences...
- `static StructureVillagePieces.House1 func_175850_a(StructureVillagePieces.Start start, java.util.List<StructureComponent> p_175850_1_, java.util.Random rand, int p_175850_3_, int p_175850_4_, int p_175850_5_, EnumFacing facing, int p_175850_7_)`
- `protected int func_180779_c(int p_180779_1_, int p_180779_2_)`

## Fields

- `House1`
- `House1`